src/objects/Field__c.object
<CustomObject>
    <fields>
        <fullName>Byte_Length__c</fullName>
        <label>Byte Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>anytype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>base64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combobox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataCategoryGroupReference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EncryptedString</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiPicklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isCalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <referenceTo>sObject__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unique_Name__c</columns>
        <columns>sObject__c</columns>
        <columns>isCalculated__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>